Prevent image distortion on recipe form

--- a/client/src/pages/recipeForm/RecipeForm.scss
+++ b/client/src/pages/recipeForm/RecipeForm.scss
@@ -12,6 +12,9 @@
     margin-top: .75rem;
     margin-bottom: .75rem;
   }
+  img {
+    max-width: 100%;
+  }
   label {
     color: #333;
     display: block;
